@@ -381,3 +381,4 @@ Balke.
 - updated translations by Ville Skyttä and Diego Pierotto
 
 2009-XX-XX Version 0.2.3
+- last version broke importing from setup menu
